Añadir contacto.php y modifico index.html y contacto.html

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 					<li><a href="elements.html">Elements</a></li>
 					<li><a href="generic.html">Generic</a></li>
 					<li><a href="servicios.html">Servicios</a></li>
+					<li><a href="contactos.html">Contactos</a></li>
 				</ul>
 			</nav>
 
