--- a/servicios.html
+++ b/servicios.html
@@ -17,7 +17,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a class="logo" href="index.html">Industrious</a>
+				<a class="logo" href="index.html">Industrious - QUIENES SOMOS </a>
 				<nav>
 					<a href="#menu">Menu</a>
 				</nav>
@@ -34,7 +34,7 @@
 
 		<!-- Heading -->
 			<div id="heading" >
-				<h1>SERVICIOS</h1>
+				<h1>SERVICIOS - QUIENES SOMOS </h1>
 			</div>
 
 		<!-- Main -->
